Xinco UI scaffold (#54)
* feat(xinco-ui): scaffold clean Vaadin 24.7.4 + Spring Boot 3.4.7 module

Replaces the never-committed xinco-ui-v25 directory with a properly
structured Maven module wired into the parent build.

- pom.xml: Vaadin 24.7.4 BOM, Spring Boot 3.4.7 BOM, Karibu-Testing
  2.2.4, JaCoCo 80% gate, vaadin-maven-plugin, spring-boot-maven-plugin
- XincoApplication, UserSession, MainLayout, LoginView, ExplorerView
- PropertyGrid component (record-based rows)
- LoginViewTest: Karibu smoke tests for route discovery and render
- application.properties: port 8081, H2 in dev mode

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01J4fLVBa4PYJFo3U2GohPEC

* chore(xinco-ui): gitignore generated Vaadin frontend resources

src/main/frontend/generated/ is produced by vaadin-maven-plugin
prepare-frontend at build time and should not be tracked.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01J4fLVBa4PYJFo3U2GohPEC

* fix(xinco-ui): add public no-arg constructors for Karibu-Testing compatibility

Karibu uses Vaadin's ReflectTools.createInstance() which requires a
public no-arg constructor. Spring injects the real UserSession in
production; the no-arg delegates to a default empty session for tests.

Fixes LoginViewTest — 2/2 tests pass.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01J4fLVBa4PYJFo3U2GohPEC

* test(xinco-ui): add Karibu tests reaching 80% JaCoCo gate

- UserSessionTest: covers setUser/isLoggedIn/logout paths (4 tests)
- MainLayoutTest: covers logged-in and logged-out layout branches (2 tests)
- PropertyGridTest: covers constructor + setData() with mocked XincoCoreDataServer (2 tests)
- ExplorerViewTest: covers tree/data selection lambdas via mocked final server classes (3 tests)
- Enable Mockito inline mock-maker to support final class mocking
- Fix ExplorerView.loadRootNodes() 