@@ -36,7 +36,6 @@ package com.bluecubs.xinco.core.server;
 import static com.bluecubs.xinco.core.server.XincoDBManager.createdQuery;
 import static com.bluecubs.xinco.core.server.XincoDBManager.getEntityManagerFactory;
 import static com.bluecubs.xinco.core.server.XincoDBManager.namedQuery;
-import static com.bluecubs.xinco.core.server.XincoIdServer.getNextId;
 import static com.bluecubs.xinco.core.server.XincoSettingServer.getSetting;
 import static com.bluecubs.xinco.tools.MD5.encrypt;
 import static java.lang.System.currentTimeMillis;
@@ -47,21 +46,15 @@ import static java.util.logging.Logger.getLogger;
 import com.bluecubs.xinco.core.XincoException;
 import com.bluecubs.xinco.core.server.persistence.XincoCoreUserHasXincoCoreGroup;
 import com.bluecubs.xinco.core.server.persistence.XincoCoreUserHasXincoCoreGroupPK;
-import com.bluecubs.xinco.core.server.persistence.XincoCoreUserModifiedRecord;
-import com.bluecubs.xinco.core.server.persistence.XincoCoreUserModifiedRecordPK;
-import com.bluecubs.xinco.core.server.persistence.XincoCoreUserT;
 import com.bluecubs.xinco.core.server.persistence.controller.XincoCoreGroupJpaController;
 import com.bluecubs.xinco.core.server.persistence.controller.XincoCoreUserHasXincoCoreGroupJpaController;
 import com.bluecubs.xinco.core.server.persistence.controller.XincoCoreUserJpaController;
-import com.bluecubs.xinco.core.server.persistence.controller.XincoCoreUserModifiedRecordJpaController;
-import com.bluecubs.xinco.core.server.persistence.controller.XincoCoreUserTJpaController;
 import com.bluecubs.xinco.core.server.persistence.controller.exceptions.NonexistentEntityException;
-import com.bluecubs.xinco.core.server.persistence.controller.exceptions.PreexistingEntityException;
 import com.bluecubs.xinco.server.service.XincoCoreUser;
+import jakarta.persistence.EntityManager;
 import java.sql.Timestamp;
 import java.util.ArrayList;
 import java.util.Calendar;
-import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 
@@ -181,9 +174,9 @@ public final class XincoCoreUserServer extends XincoCoreUser {
                     + attrUPW
                     + "' AND xcu.statusNumber <> 2");
       }
-      if (result.size() > 0) {
+      if (!result.isEmpty()) {
         com.bluecubs.xinco.core.server.persistence.XincoCoreUser xcu =
-            (com.bluecubs.xinco.core.server.persistence.XincoCoreUser) result.get(0);
+            (com.bluecubs.xinco.core.server.persistence.XincoCoreUser) result.getFirst();
         setId(xcu.getId());
         setUsername(xcu.getUsername());
         // previously hashing the already hashed password
@@ -220,7 +213,7 @@ public final class XincoCoreUserServer extends XincoCoreUser {
         parameters.put("username", attrUN);
         result = namedQuery("XincoCoreUser.findByUsername", parameters);
         // The username is valid but wrong password. Increase the login attempts.
-        if (result.size() > 0) {
+        if (!result.isEmpty()) {
           increaseAttempts = true;
           com.bluecubs.xinco.core.server.persistence.XincoCoreUser xcu =
               (com.bluecubs.xinco.core.server.persistence.XincoCoreUser) result.get(0);
@@ -257,7 +250,7 @@ public final class XincoCoreUserServer extends XincoCoreUser {
                     + attrUN
                     + "' AND xcu.statusNumber <> 2");
         // increase number of attempts
-        if (result.size() > 0) {
+        if (!result.isEmpty()) {
           com.bluecubs.xinco.core.server.persistence.XincoCoreUser xcu =
               (com.bluecubs.xinco.core.server.persistence.XincoCoreUser) result.get(0);
           setId(xcu.getId());
@@ -290,7 +283,7 @@ public final class XincoCoreUserServer extends XincoCoreUser {
       parameters.put("id", attrID);
       result = namedQuery("XincoCoreUser.findById", parameters);
       // throw exception if no result found
-      if (result.size() > 0) {
+      if (!result.isEmpty()) {
         com.bluecubs.xinco.core.server.persistence.XincoCoreUser xcu =
             (com.bluecubs.xinco.core.server.persistence.XincoCoreUser) result.get(0);
         setId(xcu.getId());
@@ -430,12 +423,15 @@ public final class XincoCoreUserServer extends XincoCoreUser {
         xcu.setStatusNumber(getStatusNumber());
         xcu.setUsername(getUsername().replaceAll("'", "\\\\'"));
         xcu.setUserpassword(password);
-        xcu.setModificationReason(getReason() == null ? "audit.general.modified" : getReason());
-        xcu.setModifierId(getChangerID());
-        xcu.setModificationTime(new Timestamp(new Date().getTime()));
-        controller.edit(xcu);
-        // Create audit trail record
-        createAuditTrail(xcu);
+        XincoRevisionListener.MOD_REASON.set(
+            getReason() == null ? "audit.general.modified" : getReason());
+        XincoRevisionListener.MODIFIER_ID.set(getChangerID());
+        try {
+          controller.edit(xcu);
+        } finally {
+          XincoRevisionListener.MOD_REASON.remove();
+          XincoRevisionListener.MODIFIER_ID.remove();
+        }
       } else {
         // Sometimes password got re-hashed
         String password;
@@ -444,23 +440,24 @@ public final class XincoCoreUserServer extends XincoCoreUser {
         } else {
           password = getUserpassword().replaceAll("'", "\\\\'");
         }
-        xcu =
-            new com.bluecubs.xinco.core.server.persistence.XincoCoreUser(
-                getId(),
-                getUsername().replaceAll("'", "\\\\'"),
-                password,
-                getLastName().replaceAll("'", "\\\\'"),
-                getFirstName().replaceAll("'", "\\\\'"),
-                getEmail().replaceAll("'", "\\\\'"),
-                getStatusNumber(),
-                getAttempts(),
-                getLastModified());
-        xcu.setModificationReason(getReason());
-        xcu.setModifierId(getChangerID());
-        xcu.setModificationTime(new Timestamp(new Date().getTime()));
-        controller.create(xcu);
-        // Create audit trail record
-        createAuditTrail(xcu);
+        xcu = new com.bluecubs.xinco.core.server.persistence.XincoCoreUser();
+        xcu.setUsername(getUsername().replaceAll("'", "\\\\'"));
+        xcu.setUserpassword(password);
+        xcu.setLastName(getLastName().replaceAll("'", "\\\\'"));
+        xcu.setFirstName(getFirstName().replaceAll("'", "\\\\'"));
+        xcu.setEmail(getEmail().replaceAll("'", "\\\\'"));
+        xcu.setStatusNumber(getStatusNumber());
+        xcu.setAttempts(getAttempts());
+        xcu.setLastModified(getLastModified());
+        XincoRevisionListener.MOD_REASON.set(
+            getReason() == null ? "audit.general.create" : getReason());
+        XincoRevisionListener.MODIFIER_ID.set(getChangerID());
+        try {
+          controller.create(xcu);
+        } finally {
+          XincoRevisionListener.MOD_REASON.remove();
+          XincoRevisionListener.MODIFIER_ID.remove();
+        }
       }
       setId(xcu.getId());
       if (isWriteGroups()) {
@@ -475,35 +472,32 @@ public final class XincoCoreUserServer extends XincoCoreUser {
     return getId();
   }
 
-  private void createAuditTrail(com.bluecubs.xinco.core.server.persistence.XincoCoreUser xcu)
-      throws XincoException, PreexistingEntityException, Exception {
-    // Create audit trail record
-    int record_ID;
-    XincoCoreUserJpaController controller =
-        new XincoCoreUserJpaController(getEntityManagerFactory());
-    record_ID = getNextId("xinco_core_user_modified_record");
-    new XincoCoreUserTJpaController(getEntityManagerFactory())
-        .create(
-            new XincoCoreUserT(
-                record_ID,
-                getId(),
-                getUsername(),
-                getUserpassword(),
-                getLastName(),
-                getFirstName(),
-                getEmail(),
-                getStatusNumber(),
-                getAttempts(),
-                new Timestamp(getLastModified().getTime())));
-    XincoCoreUserModifiedRecord mod =
-        new XincoCoreUserModifiedRecord(
-            new XincoCoreUserModifiedRecordPK(getChangerID(), record_ID));
-    mod.setModReason(xcu.getModificationReason());
-    com.bluecubs.xinco.core.server.persistence.XincoCoreUser modifier =
-        controller.findXincoCoreUser(xcu.getModifierId());
-    mod.setXincoCoreUser(modifier == null ? controller.findXincoCoreUser(1) : modifier);
-    mod.setModTime(new Date());
-    new XincoCoreUserModifiedRecordJpaController(getEntityManagerFactory()).create(mod);
+  public static void deleteFromDB(int userId) throws Exception {
+    removeUserGroups(userId);
+    new XincoCoreUserJpaController(getEntityManagerFactory()).destroy(userId);
+  }
+
+  public static void removeUserGroups(int userId) throws Exception {
+    var uhgController = new XincoCoreUserHasXincoCoreGroupJpaController(getEntityManagerFactory());
+    for (XincoCoreGroupServer g : XincoCoreGroupServer.getGroupsOfUser(userId)) {
+      uhgController.destroy(new XincoCoreUserHasXincoCoreGroupPK(userId, g.getId()));
+    }
+  }
+
+  public static void saveUserGroups(int userId, java.util.Collection<Integer> groupIds)
+      throws Exception {
+    removeUserGroups(userId);
+    var emf = getEntityManagerFactory();
+    var uhgController = new XincoCoreUserHasXincoCoreGroupJpaController(emf);
+    var groupController = new XincoCoreGroupJpaController(emf);
+    var userController = new XincoCoreUserJpaController(emf);
+    for (int groupId : groupIds) {
+      var pk = new XincoCoreUserHasXincoCoreGroupPK(userId, groupId);
+      var uhg = new XincoCoreUserHasXincoCoreGroup(pk, 1);
+      uhg.setXincoCoreUser(userController.findXincoCoreUser(userId));
+      uhg.setXincoCoreGroup(groupController.findXincoCoreGroup(groupId));
+      uhgController.create(uhg);
+    }
   }
 
   // create complete list of users
@@ -557,26 +551,30 @@ public final class XincoCoreUserServer extends XincoCoreUser {
                   + " and x.userpassword='"
                   + (hash ? encrypt(newPass) : newPass)
                   + "'");
-      if (result.size() > 0) {
+      if (!result.isEmpty()) {
         return false;
       }
       // Here we'll catch if the password have been used in the unusable period (use id in case the
       // username was modified)
       result = createdQuery("Select x from XincoCoreUser x where x.id=" + getId());
       tempId = ((com.bluecubs.xinco.core.server.persistence.XincoCoreUser) result.get(0)).getId();
-      result =
-          createdQuery(
-              "Select x from XincoCoreUserT x where x.id="
-                  + tempId
-                  + " and x.userpassword='"
-                  + (hash ? encrypt(newPass) : newPass)
-                  + "'");
-      for (Object o : result) {
-        // Now check the aging
-        XincoCoreUserT user = (XincoCoreUserT) o;
-        long diff = currentTimeMillis() - user.getLastModified().getTime();
-        if (diff / (1_000 * 60 * 60 * 24) > getSetting("password.unusable_period").getIntValue()) {
-          return false;
+      try (EntityManager em = getEntityManagerFactory().createEntityManager()) {
+        org.hibernate.envers.AuditReader reader = org.hibernate.envers.AuditReaderFactory.get(em);
+        List<Number> revisions =
+            reader.getRevisions(
+                com.bluecubs.xinco.core.server.persistence.XincoCoreUser.class, tempId);
+        for (Number rev : revisions) {
+          com.bluecubs.xinco.core.server.persistence.XincoCoreUser historicalUser =
+              reader.find(
+                  com.bluecubs.xinco.core.server.persistence.XincoCoreUser.class, tempId, rev);
+          if (historicalUser != null
+              && historicalUser.getUserpassword().equals(hash ? encrypt(newPass) : newPass)) {
+            long diff = currentTimeMillis() - historicalUser.getLastModified().getTime();
+            if (diff / (1_000 * 60 * 60 * 24)
+                > getSetting("password.unusable_period").getIntValue()) {
+              return false;
+            }
+          }
         }
       }
       // ---------------------------
@@ -609,7 +607,7 @@ public final class XincoCoreUserServer extends XincoCoreUser {
    *
    * <p>the password is already encrypted. Usually queries from within the server itself
    *
-   * @param username User name
+   * @param username Username
    * @param password Password
    * @param encrypt Password needs encrypting?
    * @return true if valid
